# homework14

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html
src/: schemas.py
src/config/: config.py
src/db/: db_connection.py  models.py
src/middlewares/: middlewares.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  contacts_repo_test.py  route_auth_test.py  users_repo_test.py
