[tool.poetry]
name = "homework14"
version = "0.1.0"
description = ""
authors = ["jockerlol <jockerlol1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
alembic = "^1.12.1"
sphinx = "^7.2.6"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
fastapi-limiter = "^0.1.5"
libgravatar = "^1.0.4"
cloudinary = "^1.36.0"
fastapi-mail = "^1.4.1"
passlib = "^1.7.4"
pytest = "^7.4.3"
faker = "^19.13.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
